--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,33 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>{% block title %} {% endblock %}</title>
+    <title>Młody programista</title>
   </head>
 
   <body>
-      {% include 'navbar.html' %}
+   <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <span class="fs-4">Młody programista</span>
+      </a>
+        {% include 'navbar.html' %}
+
+    </header>
+
+
     <div class="container">
-        <div class="row"><br></div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-8">
-                <br><h1>{% block header %} {% endblock %}</h1><br>
-            </div>
-            <div class="col"></div>
-        </div>
-        <div class="row"></div>
-        <h2>{% block subtitle %} {% endblock %}</h2>
+        <div class="px-4 pt-5 my-5 text-center border-bottom">
+    <h1 class="display-4 fw-bold">{% block header %} {% endblock %}</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">{% block subtitle %} {% endblock %}</p>
+    </div>
+    <div class="overflow-hidden" style="max-height: 30vh;">
+      <div class="container px-5">
+          {% block header_picture %} {% endblock %}
+      </div>
+    </div>
+  </div>
+
         {% block content %} {% endblock %}
 
     <!-- Optional JavaScript; choose one of the two! -->
@@ -32,7 +43,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </div>
     <br><br><bt><br>
+       <div class="container">
     {% include "footer.html" %}
+       </div>
+       </div>
   </body>
 </html>
 
