--- a/templates/kuchnia.html
+++ b/templates/kuchnia.html
@@ -8,12 +8,17 @@ Mlody Pythonista
 Sekcja Kulinarna
 {% endblock %}
 
-{% block subtitle %} 
+{% block subtitle %}
+<br>
+kekcja kulinarna poświęcona specjałom kotki psotki :)
+{% endblock %}
+
+{% block header_picture %}
+<img src="{{ url_for('static',filename='kuchareczka.jpeg')}}" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" loading="lazy" width="100" height="100">
 {% endblock %}
 
 {% block content %}
-<img src="{{ url_for('static',filename='kuchareczka.jpeg')}}">
-kekcja kulinarna poświęcona specjałom kotki psotki :)
+
 <br><br><br><br>
 <a class="btn btn-secondary" href="{{url_for('nowy_przepis')}}" role="button">Dodaj nowy przepis</a>
 <br><br>
