--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,27 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="{{url_for('fizyka')}}">Fizyka</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Matma</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" href="#">Informatyka</a>
-        </li>
-         </li>
-         <li class="nav-item">
-             <a class="nav-link active" href="{{url_for('kuchnia')}}">Kuchnia</a>
-        </li>
-        </ul>
-    </div>
-  </div>
-</nav>
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="{{url_for('index')}}" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="{{url_for('fizyka')}}" class="nav-link">Informatyka</a></li>
+        <li class="nav-item"><a href="{{url_for('kuchnia')}}" class="nav-link">Kuchnia</a></li>
+      </ul>
+
+
