nowy kalkulator alkoholu

--- a/templates/informatyka.html
+++ b/templates/informatyka.html
@@ -16,8 +16,11 @@ Sekcja przydatnych programów informatycznych
 {% endblock %}
 
 {% block content %}
-<h2>Fizyka</h2>
+<h3>Fizyka</h3>
 <a href="{{url_for('fizyka_predkosc')}}">Ruch jednostajny prędkość</a>
+<br><br>
+<h3>Sekcja taty</h3>
+<a href="{{url_for('procent_alk')}}">Ile wyjdzie % alkocholu jeżeli zmieszam...</a>
 {% endblock %}
 
 
