kalkulator do cukru

--- a/templates/fizyka_predkosc.html
+++ b/templates/fizyka_predkosc.html
@@ -9,7 +9,7 @@ Liczymy prędkość w ruchu jednostajnym!
 {% endblock %}
 
 {% block subtitle %} 
-Kalkulator służy do obliczania prędkości. Np. jak szybko biegłeś na 400 m. <br><b>Uwaga:</b> gijeżeli wpisujesz wartości po przecinku, użyj kropki
+Kalkulator służy do obliczania prędkości. Np. jak szybko biegłeś na 400 m. <br><b>Uwaga:</b> jeżeli wpisujesz wartości po przecinku, użyj kropki
 {% endblock %}
 
 {% block header_picture %}
