--- a/templates/informatyka.html
+++ b/templates/informatyka.html
@@ -21,6 +21,8 @@ Sekcja przydatnych programów informatycznych
 <br><br>
 <h3>Sekcja taty</h3>
 <a href="{{url_for('procent_alk')}}">Ile wyjdzie % alkocholu jeżeli zmieszam...</a>
+<br><br>
+<a href="{{url_for('wino_cukier')}}">Ile potrzeba cukru do win</a>
 {% endblock %}
 
 
