--- a/templates/tata_procent_alk.html
+++ b/templates/tata_procent_alk.html
@@ -9,7 +9,7 @@ Liczymy stężenie alkoholu w cieczy
 {% endblock %}
 
 {% block subtitle %} 
-Kalkulator służy do obliczania stężenia alkoholu w roztworze. Np. co się stanie jak do piwa dolejesz kieliszek wódki :). <br><b>Uwaga:</b> gijeżeli wpisujesz wartości po przecinku, użyj kropki
+Kalkulator służy do obliczania stężenia alkoholu w roztworze. Np. co się stanie jak do piwa dolejesz kieliszek wódki :). <br><b>Uwaga:</b> jeżeli wpisujesz wartości po przecinku, użyj kropki
 {% endblock %}
 
 {% block header_picture %}
