--- a/templates/tata_wino_cukier.html
+++ b/templates/tata_wino_cukier.html
@@ -5,7 +5,7 @@ Mlody Pythonista
 {% endblock %}
 
 {% block header %}
-Liczymy stężenie alkoholu w cieczy
+Cukier do wina
 {% endblock %}
 
 {% block subtitle %} 
