--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@ Strona którą zrobiłem żeby pokazać synowi Błażejowi możliwości pythona,
 <br>
 2021.12.27 - dodano sekcję kuchnia<br>
 2021.12.30 - nowy wygląd<br>
+2022.01.29 - Kalkulator BMI w technlogi JavaScript<br>
 
 
 {% endblock %}
