--- a/templates/informatyka.html
+++ b/templates/informatyka.html
@@ -19,10 +19,12 @@ Sekcja przydatnych programów informatycznych
 <h3>Fizyka</h3>
 <a href="{{url_for('fizyka_predkosc')}}">Ruch jednostajny prędkość</a>
 <br><br>
-<h3>Sekcja taty</h3>
+<h3>Lifestyle</h3>
 <a href="{{url_for('procent_alk')}}">Ile wyjdzie % alkocholu jeżeli zmieszam...</a>
 <br><br>
 <a href="{{url_for('wino_cukier')}}">Ile potrzeba cukru do win</a>
+<br><br>
+<a href="{{url_for('bmi')}}">Kalkulator BMI</a>
 {% endblock %}
 
 
