--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,14 @@ Strona którą zrobiłem żeby pokazać synowi Błażejowi możliwości pythona,
 {% endblock %}
 
 {% block content %}
+
+<div id="myBar">
+    <p id="demo"></p>
+</div>
+
+
+<script src="{{url_for('static', filename='count_down.js')}}"></script>
+
 <br>
 2021.12.27 - dodano sekcję kuchnia<br>
 2021.12.30 - nowy wygląd<br>
