--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Młody programista</title>
+    <style>
+        #myBar {
+          color:white;  
+          background-color:rgb(243, 209, 16);  
+          padding:5px;
+          font-size: 40px;
+          font-weight: bold;
+        }
+
+    </style>
   </head>
 
   <body>
